
        Supported values are: cash, transfer, transfer/cash, card,
        compensation, barter, contract (and its Polish translations)
        or empty string.
    -----------------------------------------------------------------
  - Per-assignment payment type and numbering plan (alec)
  - fixed removal of helpdesk attachments + added foreign keys (alec)
  - fix array_agg definition for Postgresql 8.1 (alec)

version 1.11.10 Kri (2010-04-19)

  - contrib/daemon/gentoo-init: small fixes (Mariusz Szulerecki)
  - lmsd/oident: use lower case'd node names (alec)
  - added PowerDNS support, LMS now can directly manage PowerDNS server 
    with mysql/pqsql backend support (Dariusz Kowalczyk/Jan Gancarczyk)
  - Userpanel: added possibility to print many invoices with one click (alec)
  - unified pdf invoices in Userpanel and LMS-UI (alec)
    ------------------------------------------------------
    WARNING: MySQL database requires InnoDB engine support
    ------------------------------------------------------
  - changed MySQL tables engine to InnoDB (Dariusz Kowalczyk)
  - BTS#0000812: fixed date filter for Cash Import History (alec)
  - lmsd/payments: fixed buffer overflow in quarterday calculations (alec)
  - lmsd/payments: BTS#0000810 - fixed check_invoices option (alec)
  - added deadline date (paytime) for debit notes (alec)
  - added invoices/paytype, invoices/paytime and notes/paytime options (alec)
  - added per-division paytime and paytype (alec)
  - allow finances operation description to be longer than 255 characters (alec)
  - lib/pdf.php: fixed display of pdf document in IE8
    (http://support.microsoft.com/kb/316431) (Grzegorz Chwesewicz)
  - enabled transactions in MySQL database (alec)
  - lmsd: added client character set setting command after connection (alec)
  - lmsd/cutoff: support %B and %b variables in warning message (alec)
  - lmsd/tc-new: add optional condition to use nightly tariff values only for